lowercase var name

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,7 +1,7 @@
 doctype html
 html
   head
-    title= settings.pageTitle
+    title= settings.pagetitle
     meta(name='description', content= settings.description)
     link(rel='stylesheet', href='/themes/#{settings.theme}/bootstrap.min.css')
     link(rel='stylesheet', href='/vendor/jqplot/jquery.jqplot.css')
