hardcode title/description

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,8 +1,8 @@
 doctype html
 html
   head
-    title= settings.pagetitle
-    meta(name='description', content= settings.description)
+    title= 'rvnhodl.com - ravencoin (rvn) block explorer'
+    meta(name='description', content='ravencoin block explorer. check balances of any raven address. inspect blocks, transactions, holdings, etc.')
     link(rel='stylesheet', href='/themes/#{settings.theme}/bootstrap.min.css')
     link(rel='stylesheet', href='/vendor/jqplot/jquery.jqplot.css')
     link(rel='stylesheet', href='//cdn.datatables.net/plug-ins/725b2a2115b/integration/bootstrap/3/dataTables.bootstrap.css')
